--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile "com.android.support:recyclerview-v7:25.1.0"
     compile "com.android.support:cardview-v7:25.1.0"
 
+    //Retrofit Dependencies
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
