--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mathew.navjacinth.com.retrofitdemo">
 
+    <!--Internet Permission-->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
